git-exer/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox
  name: busybox
spec:
  containers:
  - image: busybox
    name: busybox
    command: ["/bin/sh"]
    args: ['-c','i=0; while true; do echo "$i $(date)";i=$((i+1));sleep $INTERVAL; done']
    resources: {}
    volumeMounts:
    - name: data
      mountPath: /etc/foo
  restartPolicy: Always
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: pvc005
  nodeSelector:
    type: redis
status: {}
