git-exer/busybox1.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    access: granted
  name: busybox1
spec:
  containers:
  - image: busybox
    name: busybox1
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
