git-exer/mypod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-cache
  namespace: web
spec:
	containers:
	- image: lfccncf/redis:4.0-alpine
      name: redis-cache
      ports:
	  - containerPort: 6379
	  volumeMounts:  
	  - name: shared-dir
	    mouthPath: /usr/tmp
	- image: busybox
      name: busybox-sidecar
	  volumeMounts:
      - name: shared-dir
        mountPath: /usr/tmp
      ports:
		- containerPort: 8080
	volumes:
	- name: shared-dir
	  hostPath:
		path: /usr/tmp
