git-exer/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
  - image: busybox
    name: busybox
    ports:
    - containerPort: 80
  tolerations:
  - key: "nginx"
    operator: "Equal"
    value: "webapp"
    effect: "NoSchedule"
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: "app"
            operator: "In"
            values: ["webserver1", "webserver"]
