git-exer/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:


  containers:
  - image: nginx
    name: nginx
    args:
      - /bin/sh
      - -c
      - touch /tmp/healthy; sleep 30; rm -rf /tmp/healthy; sleep 600
    ports:
    - containerPort: 80
    resources: 
      requests:
        cpu: 100m
        memory: 256Mi
      limits:
        cpu: 200m
        memory: 512Mi
    # volumeMounts:
    # - name: keys
    #   mountPath: /etc/config
    livenessProbe:
      # exec:
      #   command:
      #   - date 
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 5
  dnsPolicy: ClusterFirst
  restartPolicy: Never
  # volumes:
  # - name: keys
  #   secret:
  #     secretName: mysecret2
  serviceAccountName: myuser
  
status: {}
