git-exer/nginx_vol.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx:1.7.1
    name: nginx
    ports:
    - containerPort: 80
    resources: {}
    # env:
    # - name: OPTIONS
    #   valueFrom:
    #     configMapKeyRef:
    #       name: options
    #       key: var5
    # envFrom:
    # - configMapRef:
    #     name: options
    volumeMounts:
    - name: config-data
      mountPath: /etc/config
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
  - name: config-data
    configMap:
      name: options
      items:
      - key: VAR6
        path: key_var6
status: {}
