git-exer/nginx-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: nginx-networkpolicy 
spec:
    podSelector:
        matchLabels:
            app: nginx
    policyTypes:
    - Ingress
    ingress:
    - from:
        - podSelector:
            matchLabels:
              access: granted
      ports:
      - protocol: TCP
        port: 80
